objects/Integration_Status__c.object
<CustomObject>
    <description>This object is used to store statues of Integration callouts made.</description>
    <fields>
        <fullName>Case_Comments__c</fullName>
        <description>This field will house the data for case comments from the case comment object</description>
        <label>Case Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_By_Lan_ID_Text__c</fullName>
        <description>Lan Id of the Record Creator</description>
        <label>Created By Lan ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Lan_ID__c</fullName>
        <description>Lan id of the Record Creator</description>
        <formula>CreatedBy.Lan_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Createdby LanID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Name__c</fullName>
        <description>Name of the Record Creator</description>
        <formula>CreatedBy.FirstName +&apos; &apos;+ CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <description>Error Code if error occurred</description>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Error Message if error occurred</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used to capture the external ID field of the 3rd party application system.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Action__c</fullName>
        <description>This field will be used to send the Integration Action value for the message broker to call the corresponding WSDL methods</description>
        <label>Integration Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Note Insert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <description>Status of integration</description>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modifed_Lan_ID_Text__c</fullName>
        <description>Lan id of the Last modified user</description>
        <label>Last Modifed Lan ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modifed_Lan_ID__c</fullName>
        <description>Lan id of the Last modified user</description>
        <formula>LastModifiedBy.Lan_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modifiedby LanID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectID__c</fullName>
        <description>This will contain ID of the record on which the action has to be performed</description>
        <externalId>true</externalId>
        <label>ObjectID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <description>Type of object</description>
        <label>ObjectType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CaseComment</fullName>
                </value>
                <value>
                    <fullName>Attachments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_External_ID__c</fullName>
        <description>This will house the external ID of the parent Case record</description>
        <label>Parent External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_ID__c</fullName>
        <description>Parent object Id</description>
        <label>Parent Object ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Processed__c</fullName>
        <description>Total time processed</description>
        <label>Time Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Sent__c</fullName>
        <description>Time sent</description>
        <label>Time Sent</label>
        <type>DateTime</type>
    </fields>
    <label>Integration Status</label>
    <nameField>
        <displayFormat>IS-{0}</displayFormat>
        <label>Integration Status #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>